app/assets/stylesheets/components/_card.scss
// general
.card__image-bg {
  background-size: cover;
  background-position: center;
}

.card__image-bg .br-2 {
  border-radius: 5px;
}

.methodology__image {
  padding: 12px;
  box-shadow: 4px 4px 20px rgba(0, 0, 0, .1);
  border-radius: 10px;
  height: 100%;
  min-height: 310px;
}

// START

.card__dashboard {
  // background-color: white;
  border-radius: 8px;
  // margin-top: 8px;
}

.cards-container {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 1rem;
  padding: 1rem;
}

.cards {
  display: grid;
    grid-template-columns: 1fr;
  grid-gap: 16px;
  height: fit-content;
}

.cards__observatories {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 16px;
}

.observatory__card {
  display: grid;
  /* grid-template-columns: 1fr 1fr; */
  // grid-template-rows: 2fr 1fr;
  filter: drop-shadow(4px 4px 20px rgba(0, 0, 0, 0.1));
  transition: .3s ease-in-out;
  img {
    border-radius: 10px 10px 0px 0px;
    width: 100%;
  }

  p {
    background: #FFFFFF;
    border-radius: 0px 0px 10px 10px;
    width: 100%;
    height: 68px;
    padding: 12px 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-weight: 600;
    font-size: 16px;
    line-height: 24px;
    letter-spacing: 0.15px;
    text-align: center;
  }

}

.observatory__card--image {
  background-size: cover;
}


.card__observatory {
  background-size: cover;
  background-position: center;
  height: 150px;
  border-radius: 1px;
  box-shadow: 0 0 10px rgba(0, 0, 0, .2);
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  font-size: 22px;
  color: white;
  font-weight: bolder;
  text-shadow: 0 0 10px rgba(0, 0, 0, .7);
  transition: transform .2s ease;
  &:hover {
    transform: scale(1.05);
  }
}

.cards-container .card__map {
  height: 100vh;
  position: sticky;
  top: 0;
}

.card__we {
  display: flex;
  flex-direction: column;
  align-items: center;
  .circle--gray {
    margin-bottom: 2rem;
  }
  p {
    color: $primary;
    width: 14rem;
    text-align: center;
    margin-top: 1rem;
    font-weight: 400;
    font-size: 1rem;
    line-height: 24px;
    letter-spacing: 0.15px;
  }
}

// ARTICLE

.article__recent_new {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: .7rem;
  background-color: white;
  background: #FFFFFF;
  box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.1);
  border-radius: 10px;
}

.card__image-bg--recent {
  width: 100%;
  height: 196px;
  border-radius: 10px 10px 0 0px;
}

@media (min-width: 1200px) {
  .article__recent_new {
    grid-gap: 1rem;
    grid-template-columns: 1fr 3fr;
  }

  .card__image-bg--recent {
    width: 100%;
    height: 100%;
    border-radius: 10px 0 0 10px;
  }
}

.article__home {
  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.1);
  border-radius: 10px;
}

.article__home .article__home_image {
  border-radius: 10px 10px 0 0;
}

.article__home__content {
  background-color: white;
  border-radius: 0 0 10px 10px;
  padding: 13px 15px 15px 15px;
}
.article__home__content__info {
  display: grid;
  grid-template-rows: 1fr 2fr;
  grid-gap: .25rem;
}

.article__home__tags {
  display: flex;
  align-items: center;
  gap: .5rem;
}

.article__home_header {
  font-weight: 700;
  font-size: .8rem !important;
  line-height: 19px;
  letter-spacing: 0.15px;
}

.article__card {
  box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.1);
  border-radius: 10px;
  .card__image {
    border-top-right-radius: 10px;
    border-top-left-radius: 10px;
    height: 144px;
  }
}

.articles__home .article__card {
  min-height: 100%;
}

.article__card.full-height {
  min-height: 100%;
}

.card__image--highlight {
  height: 196px !important;
}

.article__card__content {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 8px;
  padding: 18px 15px;
}

.article__content__date {
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: .4px;
}

.card__content__header small {
  display: flex;
  justify-content: center;
  align-items: center;
}

small.tag {
  text-transform: uppercase;
  font-weight: 500;
  font-size: 8px;
  line-height: 16px;
  letter-spacing: 1.5px;
  padding: 5px 7px;
  border: 2px solid rgba(8, 52, 97, 0.1);
  border-radius: 5px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.tag.tag--hidden {
  display: none;
}

.home_article_tags {
  display: flex;
}

@media (min-width: 768px) {
  .card__image--highlight {
    height: 278px !important;
  }
  .article__card .card__image {
    height: 178px;
  }

  .article__home_image {
    height: 154px;
  }
  small.tag {
    font-size: 10px;
  }

  .article__home_header {
    font-weight: 700;
    font-size: 1rem !important;
    line-height: 26px;
    letter-spacing: 0.15px;
  }
}

@media (min-width: 992px) {
  .card__image--highlight {
    height: 264px !important;
  }
  .article__card .card__image {
    height: 144px;
  }
  .tag.tag--hidden {
    display: inherit;
  }

  .home__articles .article__home__content__info {
    display: flex;
    align-items: start;
    justify-content: space-between;
    flex-direction: column;
  }
  .card__content__header {
    flex-direction: row;
  }
}
@media (min-width: 1200px) {
  .card__image--highlight {
    height: 352px !important;
  }
  .article__card .card__image {
    height: 144px;
  }
}

// CARD INDEX

.cards__index {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 1rem;
}

.cards__index.cards__index--min-two {
  grid-template-columns: 1fr 1fr;
}

.cards__index--min-two img {
  box-shadow: -5px 5px 19px 3px rgba(82, 81, 81, 0.05);
  border-radius: 5px;
}


.card__index {
  height: 100%;
  border-radius: 10px;
  & > div {
    height: 281px;
    border-radius: 10px 10px 0px 0px;
  }
  p {
    padding: 8px 9px;
    text-align: center;
    border-radius: 0px 0px 10px 10px;
    box-shadow: 4px 4px 20px rgba(0, 0, 0, .1);
    font-weight: 600;
    letter-spacing: .15px;
    margin-bottom: 0;

  }

  &:hover {
    text-decoration: none;
    box-shadow: 1px 1px 5px rgba(0, 0, 0, .1);
  }
}

.cards__index.cards__index--grid {
  display: grid;
  grid-template-rows: 4fr 1fr;
  align-items: center;
  grid-gap: 0;

  p {
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  &:hover {
    text-decoration: none;
    box-shadow: 0;
    img {
      box-shadow: 1px 1px 7px rgba(0,0,0,0.1);
    }
  }
}
.album__card {
  position: relative;
  &:hover {
    .card__link--hidden {
        opacity: 1;
      }
  }
}

.album__card__link {
  transition: opacity .5s ease;
  position: absolute;
  top: 8px;
  left: 8px;
}

.card__link--hidden {
  opacity: 0;
}

.card__link--hover {
  opacity: 1;
}

// METHDO CARD
.methodology__card {
  border-radius: 10px 10px 0 0;
  height: 300px;
  img {
    border-radius: 10px 10px 0 0;
  }
  .card__content {
    text-align: center;
    padding: 18px 28px;
    background-color: white;
    border-radius: 0 0 10px 10px;
  }
}


.new__card {
  border-radius: 10px;
  box-shadow: 4px 4px 20px rgba(0, 0, 0, .1);
  transition: box-shadow .2s ease-out;
  &:hover {
    box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.2);
  }
}

.new__card .card__content {
  text-align: center;
  padding: 18px;
  background-color: white;
  border-radius: 0 0 10px 10px;
}


.card__content:hover {
  h6 {
    opacity: .7;
  }
}

// EVENT CARD

.events__carousel {
  display: -webkit-box;
  overflow: scroll;
  padding: 12px 0;
  grid-gap: 2rem;
  // justify-content: space-around;
}

.card__event {
  // height: 486px;
  // display: grid;
  // grid-template-rows: 3fr 1fr;
  // grid-gap: 1rem;
  box-shadow: 4px 4px 20px rgba(0, 0, 0, .1);
  background-color: rgba(255, 255, 255, 1);
  border-radius: 10px;
  & > div:first-child {
    border-radius: 10px 10px 0 0;
  }

  .card__event__image {
    height: 254px;
  }
}

.card-event .event-image {
  background-size: cover;
  background-position: center;
  height: 100%;
}

.event__tags .tag:first-child {
  margin-right: .5rem;
}

.event__content {
  display: grid;
  grid-template-columns: 9fr 4fr;
  padding: 16px 10px;
  // grid-gap: 1rem;
  h5 {
    font-size: .9em;
    line-height: 16px;
  }
  &:hover {
    h5 {
      color: $r-blue-l !important;
    }
  }
}

.event__date {
  background-color: rgba(255, 255, 255, 0.949999988079071);
  // margin: 0px 12px 1rem 1rem;
  border-radius: 10px;
  border: 1px solid rgba(8, 52, 97, 0.35);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 8px 16px;
}

.event__date > p:not(.date__year) {
  font-weight: 700;
  font-size: 20px;
  line-height: 26px;
  /* identical to box height, or 130% */

  text-align: center;
  letter-spacing: 0.15px;
  font-feature-settings: 'pnum' on, 'lnum' on;
}

.event__tags:first-child {
  margin-right: 1rem;
}

// CARD SQUARE

.cards--two {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 1rem;
}

.card__square {
  width: 100%;
  height: 155px;
  background-size: cover;
  background-position: center;
  border-radius: 10px;
  box-shadow: -5.55932px 5.55932px 19.4576px 3.33559px rgba(82, 81, 81, 0.08);
  transition: scale .2s ease-in-out;
  &:hover {
    scale: 1.02;
    box-shadow: -5.55932px 5.55932px 19.4576px 5.3625px rgba(82, 81, 81, 0.08);
  }
}

// SLIDE CARD ABOUT
.slide__wrapper_about {
  background-color: #f3f5f7;
  padding-top: 1.1rem;
  padding-bottom: 1.1rem;
}
.slide__card {
  background-color: white;
  // padding-top: 1rem;
  // border-radius: 10px;
  box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.1);
}

.slide__card__image {
  width: 100%;
  background-size: cover;
  background-position: center;
  /* border-radius: 5px; */
  height: 212px;
}

.slide__subtitle {
  p {
    font-size: 11.6842px;
    line-height: 16px;
    letter-spacing: 0.389474px;
    padding: 8px 12px;
    color: black;
  }
}

@media (min-width: 768px) {
  .card__square {
    height: 195px;
  }

  .slide__card__image {
    height: 544px;
  }

  .slide__subtitle--lg {
    position: absolute;
    bottom: 0;
    background-color: white;
    border-top-right-radius: 5px;
    p {
      color: $r-blue-d !important;
    }
  }
}



@media (min-width: 990px) {
  .card__square {
    height: 225px;
  }
  .slide__wrapper_about {
    // padding-bottom: 3.3rem;
  }

  .slide__card {
    padding: 1rem;
  }
  .slide__card__image {
    border-radius: 5px;
  }
}
@media (min-width: 1200px) {
  .card__square {
    height: 280px;
  }
}


@media (max-width: 576px) {
  .cards__index {
    grid-template-columns: 1fr;
  }
}
@media (min-width: 576px) {
  .cards-container {
    grid-template-columns: 1fr 1fr;
  }
  .cards__index {
    grid-template-columns: 1fr 1fr;
  }
}
@media (min-width: 768px) {
  .cards {
    grid-template-columns: 1fr 1fr;
  }
  .cards--two {
    grid-template-columns: 1fr 1fr 1fr;
  }
  .cards__index, .cards__observatories {
    grid-template-columns: 1fr 1fr 1fr;
  }
}
@media (min-width: 768px) {
  .cards-container {
    grid-template-columns: 3fr 2fr;
  }
}
// @media (min-width: 768px) {
//   .cards {
//     grid-template-columns: 1fr 1fr 1fr;
//   }
// }
@media (min-width: 992px) {
  .cards__index, .cards__observatories, .cards--two {
    grid-template-columns: 1fr 1fr 1fr 1fr;
  }
}
// grid-template-columns: 1fr 1fr 1fr;

@media (min-width: 992px) {
  .ms-lg-5 {
    margin-left: 7rem !important;
  }
}


@media (min-width: 1440px) {

  .new__card .card__content {
    padding: 18px 24px;
  }
}

